<resources>
    <string name="app_name">OddJob</string>
    <string name="title_activity_maps">Map</string>
    <string name="cancel">Cancel</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="new_name">New Name</string>
    <string name="new_phone">New Phone #</string>
    <string name="submit">Submit</string>
    <string name="upload_a_profile_picture">Upload a Profile Picture</string>
    <string name="upload_image">Upload Image</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register">Register</string>
    <string name="edit">Edit</string>
    <string name="my_profile">My Profile</string>
    <string name="name_nassim">Name: Nassim</string>
    <string name="contact_257_912_1596">Contact # : 257-912-1596</string>
    <string name="email_pokemaster642_gmail_com">Email : pokemaster642@gmail.com</string>
    <string name="log_out">Log Out</string>
    <string name="this_is_where_your_posted_jobs_go">This is where your posted jobs go!</string>
    <string name="welcome_to_oddjob">Welcome to OddJob!</string>
    <string name="first_name">First Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="page_title">Page Title</string>
    <string name="nassim_s_oddjob">Nassim\'s OddJob</string>
    <string name="_267_916_4309">267-916-4309</string>
    <string name="need_someone_to_fix_my_dishwasher">Need someone to fix my dishwasher</string>
    <string name="_2884_walnut_hill_street">2884 Walnut Hill Street</string>
    <string name="_100">$100</string>
    <string name="need_someone_to_fix_my_dishwasher_willing_to_pay_more_if_needed">Need someone to fix my dishwasher. Willing to pay more if needed.</string>
    <string name="post_an_oddjob">Post an OddJob</string>
    <string name="title">Title</string>
    <string name="price">Price ($)</string>
    <string name="description_280_character_limit">Description (280 character limit)</string>
    <string name="delete">Delete</string>
    <string name="my_jobs">My Jobs</string>
    <string name="map">Map</string>
    <string name="don_t_have_an_account_register_here">Don\'t have an account? Register here!</string>
</resources>