<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ddebfb"
    tools:context=".MainActivity">


    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/main_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="125dp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:hint="@string/email"
        android:background="@drawable/roundedbutton"
        android:backgroundTint="#F2F2F2"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="20dp"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:paddingStart="15dp"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="360dp"
        android:background="@drawable/roundedbutton"
        android:hint="@string/password"
        android:backgroundTint="#F2F2F2"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="20dp"
        android:inputType="textPassword"
        android:padding="15dp"
        android:paddingStart="15dp"/>

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="475dp"
        android:background="@drawable/roundedbutton"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:paddingRight="100dp"
        android:paddingLeft="100dp"
        android:text="@string/log_in" />

    <TextView
        android:id="@+id/registerText"
        android:layout_height="wrap_content"
        android:layout_marginTop="550dp"
        android:layout_width="wrap_content"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:text="@string/don_t_have_an_account_register_here" />

</RelativeLayout>