<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="15dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#ddebfb">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/jobPerson"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:text="@string/nassim_s_oddjob"
                    android:gravity="start"
                    android:textColor="#262c4c"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/jobPhone"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/_267_916_4309"
                    android:textColor="#262c4c"
                    android:textAlignment="textEnd"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:textStyle="bold" />

            </LinearLayout>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/jobPfp"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_marginTop="15dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_launcher_background" />

            <TextView
                android:id="@+id/jobTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="25sp"
                android:text="@string/need_someone_to_fix_my_dishwasher"
                android:textColor="#262c4c"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="5dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/jobAddress"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:paddingBottom="10dp"
                    android:text="@string/_2884_walnut_hill_street"
                    android:textColor="#262c4c"
                    android:layout_marginStart="5dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/jobPrice"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:layout_marginEnd="20dp"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:text="@string/_100"
                    android:textStyle="bold"
                    android:visibility="visible" />
            </LinearLayout>


            <TextView
                android:id="@+id/jobDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#F2F2F2"
                android:background="@drawable/textbox"
                android:textColor="#000"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingTop="10dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:paddingBottom="10dp"
                android:text="@string/need_someone_to_fix_my_dishwasher_willing_to_pay_more_if_needed"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"/>


        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>