<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapsActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:cardBackgroundColor="#ddebfb"
        app:cardCornerRadius="0dp"
        app:cardElevation="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:src="@drawable/main_logo"
                android:layout_centerHorizontal="true" />


        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/mapSection">

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MapsActivity" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom = "true"
            android:layout_alignParentEnd = "true"
            android:fillViewport="true"
            android:backgroundTint="#b94df0"
            app:borderWidth="0dp"
            android:layout_marginBottom="54dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/baseline_handyman_black_18dp" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ddebfb"
        android:id="@+id/profileView">

        <TextView
            android:id="@+id/editProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp"
            android:text="@string/edit"
            android:layout_marginStart="10dp"
            android:textColor="@color/quantum_googblue"
            android:textSize="20sp" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/pfp"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="100dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_launcher_background" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="325dp"
            android:text="@string/my_profile"
            android:layout_centerHorizontal="true"
            android:textColor="#262c4c"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/myName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="400dp"
            android:text="@string/name_nassim"
            android:layout_marginStart="10dp"
            android:textColor="#262c4c"
            android:textSize="20sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="435dp"
            android:background="#c0c0c0"/>

        <TextView
            android:id="@+id/myNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="445dp"
            android:text="@string/contact_257_912_1596"
            android:layout_marginStart="10dp"
            android:textColor="#262c4c"
            android:textSize="20sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="480dp"
            android:background="#c0c0c0"/>


        <TextView
            android:id="@+id/myEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="490dp"
            android:text="@string/email_pokemaster642_gmail_com"
            android:layout_marginStart="10dp"
            android:textColor="#262c4c"
            android:textSize="20sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="525dp"
            android:background="#c0c0c0"/>

        <TextView
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="575dp"
            android:background="@drawable/roundedbutton"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:paddingRight="100dp"
            android:paddingLeft="100dp"
            android:text="@string/log_out" />

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/my_job_recycler_view"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintHeight_default="wrap"/>

    <TextView
        android:id="@+id/emptyRecycler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="325dp"
        android:text="@string/this_is_where_your_posted_jobs_go"
        android:layout_centerInParent="true"
        android:textAlignment="center"
        android:textColor="#262c4c"
        android:textSize="40sp"
        android:textStyle="bold" />





    <!-- layout.xml -->
    <com.ismaeldivita.chipnavigation.ChipNavigationBar
        android:id = "@+id/navBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        app:cnb_menuResource="@menu/bottom_menu" />
</RelativeLayout>